--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="utf-8">
     <title>TWELEVE MONTHS</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <style>
+
+      </style>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <link rel='stylesheet' href='style.css'>
     <script type='text/javascript' src='game.js'></script>
@@ -15,6 +18,8 @@
       enter name:
       <input type="text" id="myInput">
       <button type="button" id="myBtn">confirm</button>
+        <p id="cool"> Hi everyone </p>
+
     </div>
     <div class="player-card">
       <div class="player-card_name">
