--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>TWELEVE MONTHS</title>
+    <title>TWELVE MONTHS</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <style>
-
+          .cool {background-color:#fdc3c3}
       </style>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <link rel='stylesheet' href='style.css'>
