--- a/index.html
+++ b/index.html
@@ -14,15 +14,11 @@
   </head>
   <body>
     <h1>TWELVE MONTHS</h1>
-    <div class="name-input">
-      enter name:
-      <input type="text" id="myInput">
-      <button type="button" id="myBtn">confirm</button>
-        <p id="cool"> Hi everyone </p>
-
-    </div>
     <div class="player-card">
       <div class="player-card_name">
+        <p class='card_name'>name: </p>
+        <p>discipline: </p>
+        <p>assets: </p>
 
       </div>
     </div>
