--- a/index.html
+++ b/index.html
@@ -8,18 +8,17 @@
           .cool {background-color:#fdc3c3}
       </style>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <link rel='stylesheet' href='style.css'>
+    <link rel='stylesheet' href=''>
     <script type='text/javascript' src='game.js'></script>
-    <script type='text/javascript' src='utility.js'></script>
+    <script type='text/javascript' src=''></script>
   </head>
   <body>
     <h1>TWELVE MONTHS</h1>
-    <div class="player-card">
+    <div class="player-card" style='outline: '>
       <div class="player-card_name">
         <p class='card_name'>name: </p>
         <p>discipline: </p>
         <p>assets: </p>
-
       </div>
     </div>
   </body>
