added month card

--- a/index.html
+++ b/index.html
@@ -14,12 +14,18 @@
   </head>
   <body>
     <h1>TWELVE MONTHS</h1>
-    <div class="player-card" style='outline: '>
+    <div class="player-card" style='outline: 1px solid black'>
       <div class="player-card_name">
         <p class='card_name'>name: </p>
         <p>discipline: </p>
         <p>assets: </p>
       </div>
+    </div>
+
+    <div class="status-card" style='outline: 1px dotted black'>
+      <p class='current-month'>Current month: </p>
+      <button id='next'>NEXT MONTH</button>
+
     </div>
   </body>
 </html>
