--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </div>
 
     <div class="status-card" style='outline: 1px dotted black'>
-      <p class='current-month'>Current month: </p>
+      <p class='current-month'>Current month: <span id="monthSpan"></span> </p>
       <button id='next' onlick="clearInterval(myCounter)">NEXT MONTH</button>
 
     </div>
