--- a/index.html
+++ b/index.html
@@ -23,21 +23,22 @@
     </div>
 
     <div class="status-card" style='outline: 1px dotted black'>
-<<<<<<< HEAD
-      <p class='current-month'>Current month: </p>
-=======
+
       <p class='current-month'>Current month: <span id="monthSpan"></span> </p>
->>>>>>> origin/main
+
       <button id='next' onlick="clearInterval(myCounter)">NEXT MONTH</button>
 
     </div>
 
 <script>
 
-    var i = months
-    document.getElementById("monthy").innerHTML += "<br />" + 0
-    for(i=0; i<months.Length; i++)
-    {document.getElementById(+months[i])}
+//    var i = months
+//    document.getElementById("monthy").innerHTML += "<br />" + 0
+//    for(i=0; i<months.Length; i++)
+//    {document.getElementById(+months[i])}
+
+var months = ["April", "May", "June", "July", "August", "September", "October", "November", "December", "January", "February", "March"];
+
 
 
       </script>
