--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <div class="status-card" style='outline: 1px dotted black'>
 
-      <p class='current-month'>Current month: <span id="monthSpan"></span> </p>
+      <p class='current-month' id="current-month">Current month: <span id="monthSpan"></span> </p>
 
       <button id='next' onlick="clearInterval(myCounter)">NEXT MONTH</button>
 
@@ -39,7 +39,7 @@
 
 var months = ["April", "May", "June", "July", "August", "September", "October", "November", "December", "January", "February", "March"];
 
-
+document.getElementById("current-month").innerHTML
 
       </script>
 
