--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
 //    for(i=0; i<months.Length; i++)
 //    {document.getElementById(+months[i])}
 
-var months = ["April", "May", "June", "July", "August", "September", "October", "November", "December", "January", "February", "March"];
-
-document.getElementById("current-month").innerHTML
+//var months = ["April", "May", "June", "July", "August", "September", "October", "November", "December", "January", "February", "March"];
+//
+//document.getElementById("current-month").innerHTML
 
       </script>
 
